replace shazamcrest's sameBeanAs with simple json conversion